SERVER-73464 Reset lastApplied read source to default when storage snapshot closes

AutoGetCollectionLockFree modifies the read source as needed but leaks the state which can cause issues for subsequent operations. This makes lastApplied a little different from the other read sources but is a first small step to always reset the read source when we close the storage engine transaction.